# OPP_LABS

./: README.md
lab01/: CMakeLists.txt  main.cpp  solve.cpp  solve.hpp  tests.cpp
